# MultiAgentResearchWithCodex

./: .gitignore  AGENTS.md  ResearchProposal.md  pyproject.toml
Research/: gemini_research.md  gpt_research.md
configs/: base.yaml  logging.yaml  mock_local.yaml  orchestrator.yaml  swebench_lite.yaml
docs/subagents/: README.md  environment-agent.md  evaluation-agent.md  orchestrator-agent.md  reflection-agent.md  static-baseline-agent.md
scripts/: collect_rollouts.py  gpu_smoke_test.py  run_mock.py  run_pipeline.py
src/dyco_repair/: __init__.py  runner.py  types.py
src/dyco_repair/agents/: __init__.py  base.py  mock_agents.py
src/dyco_repair/credit/: __init__.py
src/dyco_repair/ensemble/: __init__.py  ranker.py
src/dyco_repair/envs/: __init__.py  loader.py  mock_env.py  swebench_lite.py
src/dyco_repair/eval/: __init__.py  metrics.py
src/dyco_repair/logging/: __init__.py  tracker.py
src/dyco_repair/orchestrator/: __init__.py  base.py  budget.py  factory.py  policy.py  reward.py
src/dyco_repair/reflection/: __init__.py  failures.py
src/dyco_repair/retrieval/: __init__.py
src/dyco_repair/runtime/: __init__.py  gpu.py
tests/fixtures/: easy_issue.json  hard_issue.json  swebench_lite_sample.jsonl
tests/smoke/: test_mock_pipeline.py  test_swebench_pipeline.py
tests/unit/: test_budget.py  test_gpu_runtime.py  test_orchestrator.py  test_ranker.py  test_swebench_loader.py
